k8s/core/activemq-deployment.yaml
# activemq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activemq
  namespace: core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: activemq
  template:
    metadata:
      labels:
        app: activemq
    spec:

      containers:
      - name: activemq
        image: webcenter/activemq
        ports:
        - containerPort: 61616   # JMS port
        - containerPort: 8161    # web console, if needed
        volumeMounts:
        - name: activemq-data
          mountPath: /opt/apache-activemq/data
      volumes:
      - name: activemq-data
        persistentVolumeClaim:
          claimName: activemq-pvc
