k8s/core/core-deployment.yaml
# core-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: core
    namespace: core
spec:
    replicas: 1
    selector:
        matchLabels:
            app: core
    template:
        metadata:
            labels:
                app: core
        spec:
            containers:
                - name: core
                  image: project-core-service
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 8080
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "250m"
                      limits:
                          memory: "500Mi"
                          cpu: "500m"
