k8s/core/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: postgres
    namespace: core
spec:
    replicas: 1
    selector:
        matchLabels:
            app: postgres
    template:
        metadata:
            labels:
                app: postgres
        spec:
            affinity:
                nodeAffinity:
                    requiredDuringSchedulingIgnoredDuringExecution:
                        nodeSelectorTerms:
                            - matchExpressions:
                                  - key: node-role.kubernetes.io/cloud-container-g2
                                    operator: In
                                    values:
                                        - "true"
                                  - key: topology.kubernetes.io/zone
                                    operator: In
                                    values:
                                        # - bamdad
                                        - simin
                                        # - foough
                # podAntiAffinity:
                #     requiredDuringSchedulingIgnoredDuringExecution:
                #         - labelSelector:
                #               matchLabels:
                #                   app: postgres
                #           topologyKey: topology.kubernetes.io/zone
            containers:
                - name: postgres
                  image: postgres:13.13-bullseye
                  ports:
                      - containerPort: 5432
                  volumeMounts:
                      - name: postgres-storage
                        mountPath: /var/lib/postgresql/data
            volumes:
                - name: postgres-storage
                  persistentVolumeClaim:
                      claimName: postgres-pvc
