k8s/core/core-service.yaml
# core-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core
  namespace: core
spec:
  type: NodePort
  selector:
    app: core
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080  # This will map to localhost:30080
      name: http
