k8s/core/core-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-core-to-postgres
  namespace: core
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: core
          podSelector:
            matchLabels:
              app: core
      ports:
        - protocol: TCP
          port: 5432
